apps/default/dashy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: default
  labels:
    app: dashy
spec:
  type: ClusterIP
  selector:
    app: dashy
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
